<resources>
    <string name="app_name">MyBaby</string>
    <string name="title_item_detail">Baby Vaccination Detail</string>

    <string name="action_settings">Settings</string>
    <string name="vaccine_scheduler">Vaccine Scheduler</string>
    <string name="tab_name">Vaccine Scheduler tab</string>
    <string name="viewButton">View Vaccine Schedule</string>
    <string name="createButton">Add Entry</string>
    <string name="updateButton">Modify Entry</string>
    <string name="deleteButton">Delete Entry</string>

</resources>
